# waymux

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: spec.md
docs/adr/: adr-00001.md  adr-00002.md  adr-00003.md  adr-00004.md  adr-00005.md
light-speed-desktop/: Cargo.toml
light-speed-desktop/docs/: spec.md
light-speed-desktop/src/: main.rs
waymux-bridge/: Cargo.toml
waymux-bridge/docs/: spec.md
waymux-bridge/src/: config.rs  error.rs  lib.rs  main.rs  pipeline.rs
waymux-bridge/src/compositor/: input.rs  mod.rs  screencopy.rs
waymux-bridge/src/encoder/: mod.rs  raw.rs  zstd_enc.rs
waymux-bridge/src/server/: mod.rs  session.rs
waymux-bridge/tests/: config.rs  encoder_raw.rs  encoder_zstd.rs  protocol_injection.rs  session_backpressure.rs
waymux-client-rs/: Cargo.toml
waymux-client-rs/src/: lib.rs
waymux-client/docs/: spec.md
waymux-proto/: Cargo.toml
waymux-proto/docs/: spec.md
waymux-proto/src/: encoding.rs  error.rs  lib.rs  wfp.rs  wip.rs
waymux-proto/src/codec/: decode.rs  encode.rs  mod.rs
waymux-proto/tests/: partial_frame.rs  proptest_codec.rs  round_trip.rs
