[package]
name        = "waymux-client-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Waymux Client Rust library: Android JNI library for frame rendering and input serialization."

[lib]
name       = "waymux_client"
crate-type = ["cdylib", "rlib"]

[dependencies]
waymux-proto = { workspace = true }
